# skyline-prism

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SPECIFICATION.md  config_template.yaml  prism-config.yaml  pyproject.toml  rt_normalization_spec.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: methods.md  output_files.md
proteomics_quant_pipeline/rt_norm/: README.md  pyproject.toml
proteomics_quant_pipeline/rt_norm/src/rt_norm/: __init__.py  data_io.py
release-notes/: README.md  RELEASE_NOTES_next.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.2rc2.md  RELEASE_NOTES_v0.1.2rc3.md  RELEASE_NOTES_v0.1.2rc4.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v26.1.0.md  RELEASE_NOTES_v26.1.1.md  RELEASE_NOTES_v26.1.2.md  RELEASE_NOTES_v26.1.3.md  RELEASE_NOTES_v26.2.0.md  RELEASE_NOTES_v26.2.1.md  RELEASE_NOTES_v26.3.0.md  RELEASE_NOTES_v26.3.1.md  RELEASE_NOTES_v26.3.2.md  RELEASE_NOTES_v26.3.3.md  RELEASE_NOTES_v26.3.4.md
scripts/: analyze_consensus_rollup.py  create_subset.py  package_external_tool.py  run_comparison.py  test_rt_normalization.py
skyline-external-tool/: README.txt
skyline-external-tool/Scripts/: run_prism.py
skyline-external-tool/tool-inf/: PRISM.properties  info.properties
skyline_prism/: __init__.py  __main__.py  batch_correction.py  chunked_processing.py  cli.py  data_io.py  fasta.py  new_cmd_run.py  normalization.py  parsimony.py  rollup.py  rollup_comparison.py  rollup_comparison_report.py  spectral_library.py  transition_rollup.py  validation.py  visualization.py
skyline_prism/gui/: __init__.py  config_dialog.py  console_widget.py  main_window.py  viewer.py
tests/: __init__.py  test_adaptive_fallback.py  test_batch_correction.py  test_chunked_processing.py  test_cli.py  test_data_io.py  test_fasta.py  test_parsimony.py  test_rollup.py  test_rollup_comparison.py  test_scale_handling.py  test_spectral_library.py  test_transition_rollup.py  test_viewer_metadata.py  test_visualization.py
